@@ -1287,6 +1287,9 @@ find_file (const char *file, gfc_charlen_type file_len)
   char path[PATH_MAX + 1];
   struct stat st[2];
   gfc_unit *u;
+#if defined(__MINGW32__) && !HAVE_WORKING_STAT
+  uint64_t id = 0ULL;
+#endif
 
   if (unpack_filename (path, file, file_len))
     return NULL;
@@ -1295,7 +1298,7 @@ find_file (const char *file, gfc_charlen_type file_len)
     return NULL;
 
 #if defined(__MINGW32__) && !HAVE_WORKING_STAT
-  id_from_path (path);
+  id = id_from_path (path);
 #endif
 
   __gthread_mutex_lock (&unit_lock);
