@@ -1,3 +1,8 @@
+2009-11-30  Kai Tietz  <Kai.Tietz@onevision.com>
+
+	* io/unix.c (find_file): Add variable id conditionally for
+	mingw targets.
+
 2009-11-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* intrinsics/pack_generic.c (pack_internal): Remove unused
